--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -35,8 +35,7 @@ Metrics/PerceivedComplexity:
 Rails:
   Enabled: true
 
-require:
-  - rubocop-rails
+plugins: rubocop-rails
 
 Style/AsciiComments:
   Enabled: false
