added models, controllers and views for Post and Category, created interface for creating new posts, writed tests

--- a/.slim-lint.yml
+++ b/.slim-lint.yml
@@ -3,5 +3,10 @@ linters:
     enabled: false
   TrailingWhitespace:
     enabled: false
+  TrailingBlankLines:
+    enabled: false
   RuboCop:
     enabled: false
+  EmptyLines:
+    enabled: false
+
